--- a/client/laya/pages/test/Winner.ui
+++ b/client/laya/pages/test/Winner.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":1645,
-    "selecteID":1699,
+    "selectedBox":1371,
+    "selecteID":1587,
     "referenceLines":null,
     "props":{"width":1920,"sceneColor":"#000000","height":1080},
     "nodeParent":-1,
@@ -658,9 +658,9 @@
                 {
                     "x":30,
                     "type":"Label",
-                    "props":{"y":223,"x":1006,"width":590,"visible":true,"var":"score3","text":"得分：+800","height":48,"fontSize":36,"color":"#ffffff"},
+                    "props":{"y":223,"x":1006,"width":590,"visible":true,"var":"oneju_score3","text":"得分：+800","height":48,"fontSize":36,"color":"#ffffff"},
                     "nodeParent":1371,
-                    "label":"Label(score3)",
+                    "label":"Label(oneju_score3)",
                     "isDirectory":false,
                     "isAniNode":true,
                     "hasChild":false,
@@ -1296,9 +1296,9 @@
                 {
                     "x":30,
                     "type":"Label",
-                    "props":{"y":223,"x":1006,"width":590,"visible":true,"var":"score0","text":"总分：+800","height":48,"fontSize":36,"color":"#ffffff"},
+                    "props":{"y":223,"x":1006,"width":590,"visible":true,"var":"oneju_score0","text":"总分：+800","height":48,"fontSize":36,"color":"#ffffff"},
                     "nodeParent":1589,
-                    "label":"Label(score0)",
+                    "label":"Label(oneju_score0)",
                     "isDirectory":false,
                     "isAniNode":true,
                     "hasChild":false,
@@ -1929,9 +1929,9 @@
                 {
                     "x":30,
                     "type":"Label",
-                    "props":{"y":223,"x":1006,"width":590,"visible":true,"var":"score2","text":"总分：+800","height":48,"fontSize":36,"color":"#ffffff"},
+                    "props":{"y":223,"x":1006,"width":590,"visible":true,"var":"oneju_score2","text":"总分：+800","height":48,"fontSize":36,"color":"#ffffff"},
                     "nodeParent":1645,
-                    "label":"Label(score2)",
+                    "label":"Label(oneju_score2)",
                     "isDirectory":false,
                     "isAniNode":true,
                     "hasChild":false,
